# decision

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/workflows/: decision-development.yml  decision.yml  documentation.yml
developer/: genindex.html  index.html  objects.inv  search.html  searchindex.js
developer/_sources/: index.rst.txt
developer/_sources/introduction/: index.rst.txt
developer/_sources/reference/: index.rst.txt
developer/_sources/the_c_api/: embedding_decision.rst.txt  index.rst.txt  running_c_from_decision.rst.txt  running_decision_from_c.rst.txt
developer/_sources/the_language/: fundamentals.rst.txt
developer/_sources/the_language/definitions/: semantics.rst.txt  syntax.rst.txt
developer/_sources/the_stages_of_compilation/: code_generation.rst.txt  error_reporting.rst.txt  index.rst.txt  optimisation.rst.txt  semantic_analysis.rst.txt  syntax_analysis.rst.txt
developer/_sources/the_virtual_machine/: index.rst.txt
developer/common_data_structures/: index.html
developer/introduction/: index.html
developer/linking/: index.html
developer/reference/: index.html
developer/the_c_api/: debugging_decision_code.html  embedding_decision.html  index.html  running_c_from_decision.html  running_decision_from_c.html
developer/the_language/: fundamentals.html  index.html
developer/the_language/definitions/: index.html  semantics.html  syntax.html
developer/the_stages_of_compilation/: code_generation.html  error_reporting.html  index.html  lexical_analysis.html  optimisation.html  semantic_analysis.html  syntax_analysis.html
developer/the_virtual_machine/: index.html
docs/: README.md
docs/developer/source/: conf.py  index.rst
docs/developer/source/common_data_structures/: index.rst
docs/developer/source/introduction/: index.rst
docs/developer/source/linking/: index.rst
docs/developer/source/reference/: index.rst
docs/developer/source/the_c_api/: debugging_decision_code.rst  embedding_decision.rst  index.rst  running_c_from_decision.rst  running_decision_from_c.rst
docs/developer/source/the_language/: fundamentals.rst  index.rst
docs/developer/source/the_language/definitions/: index.rst  semantics.rst  syntax.rst
docs/developer/source/the_stages_of_compilation/: code_generation.rst  index.rst  lexical_analysis.rst  optimisation.rst  semantic_analysis.rst  syntax_analysis.rst
docs/developer/source/the_virtual_machine/: index.rst
docs/user/source/: conf.py  index.rst
docs/user/source/core_reference/: index.rst
docs/user/source/extensions/: core_reference.py
docs/user/source/getting_started/: install_decision.rst  your_first_decision_script.rst
docs/user/source/getting_started/extending_your_knowledge/: arithmetic.rst  bitwise_operations.rst  boolean_operations.rst  changing_flow_with_conditions.rst  comments.rst  condition_arithmetic.rst  conditions.rst  functions_and_subroutines.rst  importing_sheets.rst  index.rst  iteration.rst  string_manipulation.rst  variables.rst
src/: CMakeLists.txt  dasm.c  dasm.h  dbool.h  dcfg.h  dcfunc.c  dcfunc.h  dcodegen.c  dcodegen.h  dcore.c  dcore.h  ddebug.c  ddebug.h  decision.c  decision.in.h  derror.c  derror.h  dgraph.c  dgraph.h  dlex.c  dlex.h  dlink.c  dlink.h  dmain.c  dmalloc.c  dmalloc.h  dname.c  dname.h  dobj.c  dobj.h  doptimize.c  doptimize.h  dsemantic.c  dsemantic.h  dsheet.c  dsheet.h  dsyntax.c  dsyntax.h  dtype.c  dtype.h  (+2 more)
tests/: README.md  run_tests.sh  test_functions.sh
tests/arithmetic/: add.dc  add.out  arithmetic.test  div.dc  div.out  divide.dc  divide.out  mod.dc  mod.out  multiply.dc  multiply.out  subtract.dc  subtract.out
tests/bitwise_operators/: and.dc  and.out  bitwise_operators.test  not.dc  or.dc  or.out  xor.dc  xor.out
tests/c/: CMakeLists.txt  assert.h  c_from_decision.c  debugging.c  decision_files.c  decision_from_c.c  decision_objects.c  decision_strings.c
tests/c/decision_strings/: decision_strings.c
tests/changing_flow/: changing_flow.test  if_statements.dc  if_statements.out  ternary.dc  ternary.out
tests/conditions/: conditions.test  equal.dc  less_than.dc  less_than.out  less_than_or_equal.dc  less_than_or_equal.out  more_than.dc  more_than.out  more_than_or_equal.dc  more_than_or_equal.out  not_equal.dc
tests/examples/: collatz_conjecture.dc  collatz_conjecture.out  examples.test  factorial.dc  factors.dc  factors.out  fibonacci.dc  gcf.dc  hello_world.dc  inefficient_fibonacci.dc
tests/functions_and_subroutines/: functions.dc  functions.out  functions_and_subroutines.test  subroutines.dc  subroutines.out
tests/include/: include.test  library.dc  library_compiled.dc  main.dc  main.out  main_compiled.dc  main_compiled.out
tests/iteration/: for_loops.dc  for_loops.out  iteration.test  while_loops.dc
tests/strings/: length.dc  length.out  strings.test
tests/variables/: getting_values.dc  getting_values.out  setting_values.dc  setting_values.out  variables.test
user/: genindex.html  index.html  objects.inv  search.html  searchindex.js
user/_sources/core_reference/: index.rst.txt
user/_sources/getting_started/: index.rst.txt  your_first_decision_script.rst.txt
user/_sources/getting_started/extending_your_knowledge/: changing_flow_with_conditions.rst.txt  comments.rst.txt  conditions.rst.txt  importing_sheets.rst.txt  index.rst.txt  variables.rst.txt
user/_sources/introduction/: index.rst.txt
user/core_reference/: index.html
user/getting_started/: index.html  install_decision.html  your_first_decision_script.html
user/getting_started/extending_your_knowledge/: arithmetic.html  bitwise_operations.html  boolean_operations.html  changing_flow_with_conditions.html  comments.html  condition_arithmetic.html  conditions.html  functions_and_subroutines.html  importing_sheets.html  index.html  iteration.html  string_manipulation.html  variables.html
user/introduction/: index.html
